<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/popup_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#cce3e4"
    android:padding="16dp">


    <!-- Customer profile section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingVertical="16dp">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/cropped_logo_rubeus"
            android:contentDescription="Foto do cliente"
            android:layout_marginEnd="16dp"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cliente_nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="João Silva"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cliente_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="joao@empresa.com"
                android:textSize="10sp"
                android:textColor="#666" />
        </LinearLayout>
    </LinearLayout>

    <!-- Divider after profile section -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#88000000"
        android:layout_marginVertical="8dp" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <!-- Item1, Perfil -->
    <LinearLayout
        android:id="@+id/menu_item1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingVertical="16dp"
        >

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/profile"
            app:tint="#000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menuitem1"
            android:textSize="16sp" />
    </LinearLayout>


    <!-- Item2, dashboard -->
    <LinearLayout
        android:id="@+id/menu_item2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingVertical="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/dashboard"
            app:tint="#000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menuitem2"
            android:textSize="16sp" />
    </LinearLayout>


    <!-- Item3, Interacoes -->
    <LinearLayout
        android:id="@+id/menu_item3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingVertical="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/monitoring"
            app:tint="#000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menuitem3"
            android:textSize="16sp" />
    </LinearLayout>


    <!-- Item4, configuracoes -->
    <LinearLayout
        android:id="@+id/menu_item4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingVertical="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/settings"
            app:tint="#000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menuitem4"
            android:textSize="16sp" />
    </LinearLayout>


    <!-- Item5, Logout -->
    <LinearLayout
        android:id="@+id/menu_item5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingVertical="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/logout"
            app:tint="#000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menuitem5"
            android:textSize="16sp" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


</LinearLayout>